--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = [
     "ipykernel>=6.30.1",
     "ipywidgets>=8.1.7",
     "pandas>=2.3.1",
+    "python-dotenv>=1.1.1",
     "seaborn>=0.13.2",
+    "wandb>=0.21.1",
 ]
